# libdesktopenvironments

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  demo.cpp
include/: desktopenvironments.h
src/: CMakeLists.txt  budgie.cpp  budgie.h  cinnamon.cpp  cinnamon.h  deepin.cpp  deepin.h  gnome.cpp  gnome.h  i3.cpp  i3.h  idesktopenvironment.cpp  kde.cpp  kde.h  lxde.cpp  lxde.h  lxqt.cpp  lxqt.h  mate.cpp  mate.h  unity.cpp  unity.h  xfce.cpp  xfce.h
